CHANGES IN VERSION 0.4.x
------------------------

USER VISIBLE CHANGES

  o Internal MSigDB collections updated to v5.1 (as of v0.4.30).
    The major difference in v5.1 vs v5.0 seems to be an updated c7 (immunologic)
    collection, which comes on the heels of this paper:

      Compendium of Immune Signatures Identifies Conserved and Species-Specific
      Biology in Response to Inflammation
      http://www.cell.com/immunity/abstract/S1074-7613(15)00532-4

  o All methods now default to returning data.frame(s) instead of data.table(s)
    data.table is still used internally, however I understand that some people
    don't want to have them returned into their workspace.

    A global option (multiGSEA.df.return) is available for you to tweak this
    behavior, ie. set `options(multiGSEA.df.return='data.tabe')` to have
    `geneSets(gdb)` return a data.table instead of a data.frame.

  o Changed geneSetFeatureStatistics to geneSetsStats

NEW FEATURES

  o `use.treat` parameter has been added to relevant places to run the internal
    differential testing via the "treat" framework made available in limma and
    edgeR via the `treat` and `glmTreat` "pipelines," respectively. By default,
    all pipelines do not use the treat framework (but perhaps they should).

  o goseq, fry, and romer testing methods have been added.

  o Support for DGEList expression input fully baked in. Previously, a DGEList
    was shot through voom to be used internally. Internal differential gene
    expression statistics on DGELists use edgeR's quasi-likelihood framework.
    See `?edgeR::glmQLFit` for more information, and particulary reference
    Aaron Lun's tutorial on using this approach here:

      It's DE-licious: a recipe for differential expression analyses of RNA-seq
      experiments using quasi-likelihood methods in edgeR
      http://www.statsci.org/smyth/pubs/QLedgeRPreprint.pdf

  o Adds support for PANTHER pathway (and GOSLIM) genesets from PANTHER.db