@@ -39,6 +39,7 @@ export(result)
 export(resultNames)
 export(results)
 export(scoreSingleSamples)
+export(ssGSEA.normalize)
 export(tabulateResults)
 export(validateInputs)
 export(ztransformPvalues)
