@@ -6,8 +6,8 @@ test_that("Gene Sets with logFCs in oppossite extremes", {
   ## that have members that are:
   ## 1. All on one side of the expression or the other
   ## 2. On mixed sides of the expresion spectrum
-  expect_true({
-    warning("You don't have any adversarial scenarios here")
-    TRUE
-  })
+  ## expect_true({
+  ##   warning("You don't have any adversarial scenarios here")
+  ##   TRUE
+  ## })
 })
